Revision history for JSON-Schema-Draft201909

{{$NEXT}}

0.017     2020-11-24 19:15:18Z
          - refactor code into separate vocabulary classes, to faciliate
            future support for custom vocabularies
          - traverse the schema before evaluation, for more correct
            and complete extraction of identifiers and invalid syntax
          - add callbacks to traverse(), to easily find keywords of interest

0.016     2020-11-18 18:18:40Z
          - further fixes to infinite loop detection
          - fix dereference error when evaluating "definitions",
            "dependencies"
          - when adding two schema documents with no canonical uri, preserve
            knowledge of other identifiers found in the first document
          - add_schema() no longer adds additional URIs to the document
            object, only the evaluator

0.015     2020-10-20 03:08:36Z
          - fixed infinity/overflow checks for older perls

0.014     2020-10-16 19:21:17Z
          - ensure "enum" value is an array
          - do not evaluate non-arrays against "unevaluatedItems"
          - fix detection of bad $recursiveAnchor
          - fix canonical uri calculation for $schema, $recursiveAnchor, and
            infinite loop detection
          - for output_format=terse, do not omit the important errors for
            unevaluated* when annotation collection is disabled

0.013     2020-09-15 19:14:53Z
          - detect more cases of resource identifier collisions
          - fix resolution of relative $ids
          - new "terse" output format

0.012     2020-08-13 20:23:21Z
          - now using unicode semantics for pattern matching

0.011     2020-08-04 22:16:46Z
          - better normalization of uris in errors
          - now detecting infinite loops separately from deep traversal
          - optionally collect annotations
          - support for the "unevaluatedItems" and "unevaluatedProperties"
            keywords

0.010     2020-07-23 16:50:18Z