@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - now can correctly evaluate schemas containing unevaluatedItems,
+            unevaluatedProperties keywords without the user having to
+            explicitly set collect_annotations => 1 in the constructor
 
 0.017     2020-11-24 19:15:18Z
           - refactor code into separate vocabulary classes, to faciliate
